added save btn / added random bg color / added new note style

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="assets/images/icon.png">
     <title>Sticky Notes</title>
 </head>
 
@@ -32,15 +33,17 @@
         <!-- to do list note box START -->
         <!-- add new todo note START-->
         <div class="add-new-note">
-            <h2 id="todo-list-test">ToDo list</h2>
+            <h2>ToDo list</h2>
             <i class='bx bxs-plus-circle icon-styles' id="add-todo-note-btn"></i>
+            <i class='bx bx-save icon-styles todo-save-note-btn'></i>
+            
         </div>
         <!-- add new todo note END-->
         <div class="todo-list-note-box whole-note-box-styles">
+
             <!-- <div class="each-todo-list-note-box each-note-box-styles">
                 <p class="editing" contenteditable>Todo List</p>
                 <div class="note-attributes">
-                    <i class='bx bx-save icon-styles todo-save-note-btn'></i>
                     <i class='bx bx-trash icon-styles todo-delete-note-btn'></i>
                 </div>
             </div> -->
@@ -50,8 +53,9 @@
         <!-- upcomming list note box START -->
         <!-- add new upcomming note START-->
         <div class="add-new-note">
-            <h2 id="todo-list-test">Upcoming List</h2>
+            <h2>Upcoming List</h2>
             <i class='bx bxs-plus-circle icon-styles' id="add-upcomming-note-btn"></i>
+            <i class='bx bx-save icon-styles upcoming-save-note-btn'></i>
         </div>
         <!-- add new upcomming note END-->
         <div class="upcoming-list-note-box whole-note-box-styles">
