--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
 <body>
     <!-- container START -->
-    <div class="container">
 
+    <div class="container">
+        <div id="ClearLocalStorage">Clear localStorage</div>
         <!-- ReminderS text START -->
         <div class="header">
             <h3 id="reminder-text">Reminders</h3>
