disabled hide/show function

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
             <h2>ToDo list</h2>
             <i class='bx bxs-plus-circle icon-styles' id="add-todo-note-btn"></i>
             <i class='bx bx-save icon-styles todo-save-note-btn'></i>
-            <i class='bx bx-show icon-styles' id="todo-show-btn" ></i>
-            <p id="todo-hint">Status: </p>
+            <!-- <i class='bx bx-show icon-styles' id="todo-show-btn" ></i>
+            <p id="todo-hint">Status: </p> -->
+            
             
         </div>
         <!-- add new todo note END-->
@@ -47,6 +48,7 @@
                 <p class="editing" contenteditable>Todo List</p>
                 <div class="note-attributes">
                     <i class='bx bx-trash icon-styles todo-delete-note-btn'></i>
+                    <p id="todo-hour"></p>
                 </div>
             </div> -->
 
@@ -58,8 +60,8 @@
             <h2>Upcoming List</h2>
             <i class='bx bxs-plus-circle icon-styles' id="add-upcomming-note-btn"></i>
             <i class='bx bx-save icon-styles upcoming-save-note-btn'></i>
-            <i class='bx bx-show icon-styles' id="upcoming-show-btn" ></i>
-            <p id="upcoming-hint">Status: </p>
+            <!-- <i class='bx bx-show icon-styles' id="upcoming-show-btn" ></i>
+            <p id="upcoming-hint">Status: </p> -->
         </div>
         <!-- add new upcomming note END-->
         <div class="upcoming-list-note-box whole-note-box-styles">
@@ -68,8 +70,8 @@
             <!-- <div class="each-upcoming-list-note-box each-note-box-styles">
                 <p class="editing" contenteditable>Upcoming list</p>
                 <div class="note-attributes">
-                    <i class='bx bx-save icon-styles upcoming-save-note-btn'></i>
                     <i class='bx bx-trash icon-styles upcoming-delete-note-btn'></i>
+                    <p id="upcoming-hour"></p>
                 </div>
             </div> -->
 
