reworked save/delete function
- changed some styles
- fixed a bug where if you press save button multiple times it would duplicate the whole box
- added date function

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="add-new-note">
             <h2>ToDo list</h2>
             <i class='bx bxs-plus-circle icon-styles' id="add-todo-note-btn"></i>
-            <i class='bx bx-save icon-styles todo-save-note-btn'></i>
+            <!-- <i class='bx bx-save icon-styles todo-save-note-btn'></i> -->
         </div>
         <!-- add new todo note END-->
         <div class="todo-list-note-box whole-note-box-styles">
