added hint function

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- container START -->
 
     <div class="container">
+        <div class="hint"><i class='bx bx-info-circle'></i></div>
         <!-- ReminderS text START -->
         <div class="header">
             <h3 id="reminder-text">Reminders</h3>
