changed some HTML/ CSS / JS
- changed variable names and class names in html/CSS/JS
- changed styles of the note box
- cleaned some code
- added new font
- reworked random color for note background

--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@
 
 <head>
     <!-- css links -->
+
     <!-- style -->
     <link rel="stylesheet" href="assets/css/style.css">
+
     <!-- boxicons -->
     <link rel="stylesheet" href="assets/boxicons/css/boxicons.min.css">
+
     <!-- css reset -->
     <link rel="stylesheet" href="assets/css/css reset.css">
+
+    <!-- meta tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- icon -->
     <link rel="icon" href="assets/images/icon.png">
+
+    <!-- title -->
     <title>Sticky Notes</title>
 </head>
 
@@ -20,34 +29,28 @@
     <!-- container START -->
 
     <div class="container">
-        <div class="hint"><i class='bx bx-info-circle'></i></div>
-        <!-- ReminderS text START -->
-        <div class="header">
-            <h3 id="reminder-text">Reminders</h3>
+
+        <!-- hint START-->
+        <div class="hint"><i class='bx bx-info-circle icon-styles '></i></div>
+        <!-- hint END-->
+
+        <!-- note box START -->
+
+        <!-- add new note START-->
+        <div class="add-new-note">
             <div>
-                <img src="assets/images/Fulcain.png" alt="fulcain.png">
+                <h2>ToDo list</h2>
+                <i class='bx bxs-plus-circle icon-styles' id="add-note-btn"></i>
             </div>
         </div>
-        <!-- ReminderS text END -->
-
-        <!-- to do list note box START -->
-        <!-- add new todo note START-->
-        <div class="add-new-note">
-            <h2>ToDo list</h2>
-            <i class='bx bxs-plus-circle icon-styles' id="add-todo-note-btn"></i>
-            <!-- <i class='bx bx-save icon-styles todo-save-note-btn'></i> -->
+        <!-- add new note END-->
+        <div class="note-box whole-note-box-styles">
         </div>
-        <!-- add new todo note END-->
-        <div class="todo-list-note-box whole-note-box-styles">
-
-
-        </div>
-        <!-- to do list note box END -->
+        <!-- note box END -->
 
         <!-- container END -->
 
         <!-- js link  -->
         <script src="assets/js/script.js"></script>
 </body>
-
 </html>
